# ml-from-scratch

./: .gitignore  README.md  pyproject.toml
core_modules/: activation.py  linear.py
tests/core_modules/: test_activation.py  test_linear.py
