[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-from-scratch"
version = "0.1.0"
description = "From-scratch implementations of foundational ML modules and papers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["torch>=2.3.0", "numpy>=2.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["core_modules"]
